@startuml

class WiFiConnection {
  -ssid : const char*
  -password : const char*
  +WiFiConnection(ssid : const char*, password : const char*)
  +connect() : void
}

class TcpClient {
  -serverIP : const char*
  -serverPort : int
  +TcpClient(serverIP : const char*, serverPort : int)
  +connect() : bool
  +sendData(data : String) : void
  +receiveData() : String
  +isConnected() : bool
}

class UltrasonicSensor {
  -trigPin : int
  -echoPin : int
  +UltrasonicSensor(trigPin : int, echoPin : int)
  +getDistance() : float
}

class Led {
  -pin : int
  -state : bool
  -previousMillis : unsigned long
  -interval : const long
  +Led(pin : int, interval : long)
  +update() : void
  +turnOff() : void
}

Sensor : "ESP32\nSensor"
Actuator : "ESP32\nActuator"

Sensor --> UltrasonicSensor
Sensor --> WiFiConnection
Sensor --> TcpClient

Actuator --> Led
Actuator --> WiFiConnection
Actuator --> TcpClient

WiFiConnection <-- TcpClient : uses

@enduml
